outputs/main/reevo_bpp_online_2025-07-26_00-00-57/problem_iter1_response9.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 46
    only_unused_argument_sum = len(potential_capacities[[semi_satisfactory == False)] tourism_variation_score = issue_equipped_num_bin_scores / only_shift_scores + use_half_bins_aes_capacity_gain_mask
                                                                                   ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
12
4
